# csrv

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  compile_flags.txt
include/: cmmutils.h  database.h  owalogger.h  socket.h  whdlr.h
lib/: CMakeLists.txt
src/: cmmutils.c  database.c  main.c  owalogger.c  socket.c  whdlr.c
